--- a/prime-car/package.json
+++ b/prime-car/package.json
@@ -8,6 +8,9 @@
     "@mui/icons-material": "latest",
     "@mui/joy": "latest",
     "@mui/material": "latest",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.39.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
